--- a/master/webroot/index.html
+++ b/master/webroot/index.html
@@ -23,6 +23,7 @@
         <div class="row">
             <div class="col-md-12">
                 <button type="button" class="btn btn-primary" id="new-job">新建按钮</button>
+                <button type="button" class="btn btn-success" id="list-worker">健康节点</button>
             </div>
         </div>
 
@@ -83,7 +84,7 @@
 
 <!-- 日志模态框 -->
 <div id ="log-modal"  class="modal fade" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document"  style="width: 800px;">
+    <div class="modal-dialog modal-lg" role="document" >
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -100,6 +101,33 @@
                             <th>实际调度时间</th>
                             <th>开始执行时间</th>
                             <th>执行结束时间</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        
+                    </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+<!-- 健康节点模态框 -->
+<div id ="worker-modal"  class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">健康节点</h4>
+            </div>
+            <div class="modal-body">
+                <table id="worker-list" class="table table-scriped">
+                    <thead>
+                        <tr>
+                            <th>节点IP</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -210,7 +238,7 @@
         })
 
          //查看任务日志
-         $("#job-list").on("click",".log-job",function(event){
+         $("#job-list").on("click",".log-job",function(){
 
             //清空日志列表
             $("#log-list tbody").empty()    
@@ -251,6 +279,36 @@
 
             //弹出模态框
             $('#log-modal').modal('show')
+        })
+
+
+        //健康节点按钮
+        $('#list-worker').on('click',function(){
+            //清空现有table
+            $('#worker-list tbody').empty()
+
+            //拉取节点
+            $.ajax({
+                url:'/worker/list',
+                dataType:'json',
+                success:function(resp){
+                    if(resp.errno != 0){
+                        return
+                    }
+
+                    var workerList = resp.data
+                    //遍历每个IP，添加到模态框的table中
+                    for(var i = 0;i < workerList.length;++i){
+                        var workerIP = workerList[i]
+                        var tr = $('<tr>')
+                        tr.append($('<td>').html(workerIP))
+                        $('#worker-list tbody').append(tr)
+                    }
+                }
+            })
+
+            //弹出模态框
+            $('#worker-modal').modal('show')
         })
 
         // 2，定义一个函数，用于刷新任务列表
